--- a/sass/components/Main/components/Main_Page/_Main_Order.scss
+++ b/sass/components/Main/components/Main_Page/_Main_Order.scss
@@ -63,6 +63,7 @@
               letter-spacing: 1.56px;
               text-transform: uppercase;
               background-color: transparent;
+              cursor: pointer;
             }
           }
         }
