--- a/sass/components/Main/components/Gallery/_Gallery.scss
+++ b/sass/components/Main/components/Gallery/_Gallery.scss
@@ -17,6 +17,7 @@
     align-items: center;
     .Gallery_main_header {
       margin-top: 54px;
+      width: 60%;
       h1 {
         color: #0c0c0c;
         -webkit-text-stroke-width: 1;
