--- a/sass/components/Main/components/Blog_news/_Blog_news.scss
+++ b/sass/components/Main/components/Blog_news/_Blog_news.scss
@@ -9,6 +9,7 @@
   .Blog_news_main_image {
     width: 100%;
     height: 424px;
+    object-fit: cover;
   }
   .Blog_news_main_list {
     display: flex;
