--- a/sass/components/Main/components/Type_Categories/_Type_Categories.scss
+++ b/sass/components/Main/components/Type_Categories/_Type_Categories.scss
@@ -3,6 +3,8 @@
   flex-direction: column;
   margin: 0 auto;
   margin-top: 50px;
+  width: 90%;
+  margin-bottom: 50px;
   .Categories_header_list {
     display: flex;
     justify-content: space-around;
@@ -21,7 +23,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
-    padding: 20px;
     align-items: start;
     justify-content: flex-start;
     width: 100%;
