--- a/sass/components/Main/components/Gallery/_Gallery.scss
+++ b/sass/components/Main/components/Gallery/_Gallery.scss
@@ -9,6 +9,7 @@
   .Gallery_main_image {
     width: 100%;
     height: 424px;
+    object-fit: cover;
   }
   .Gallery_main_list {
     display: flex;
